// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H5 component should accept additional props 1`] = `
<Text
  accessible={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Medium",
      "fontSize": 14,
      "lineHeight": 20.16,
    }
  }
>
  "Faith does not eliminate questions. But faith knows where to take them." ― Elisabeth Elliot
</Text>
`;

exports[`the H5 component should accept and render passed in styles 1`] = `
<Text
  style={
    Object {
      "color": "salmon",
      "fontFamily": "InterUI-Medium",
      "fontSize": 14,
      "lineHeight": 20.16,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H5 component should render a loading state 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 6,
      "height": 14,
      "marginVertical": 3.08,
      "width": "60%",
    }
  }
/>
`;

exports[`the H5 component should render a loading state with correct positioning (margins) 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 6,
      "height": 14,
      "marginBottom": 10.08,
      "marginTop": 13.31,
      "marginVertical": 3.08,
      "width": "60%",
    }
  }
/>
`;

exports[`the H5 component should render correctly 1`] = `
<Text
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Medium",
      "fontSize": 14,
      "lineHeight": 20.16,
    }
  }
>
  Default H5 text
</Text>
`;

exports[`the H5 component should render with correct padding 1`] = `
<Text
  padded={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Medium",
      "fontSize": 14,
      "lineHeight": 20.16,
      "paddingBottom": 10.08,
      "paddingTop": 13.31,
    }
  }
>
  Padded H5 text
</Text>
`;
